[package]
name = "kb-stm32"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
rtt-target = { version = "0.3.1", features = ["cortex-m"] }
embedded-hal = "0.2"
embedded-time = "0.12"
nb = "1"
stm32f4xx-hal = { version = "0.13", features = ["stm32f411", "rt", "usb_fs"] }
stm32-usbd = "0.6.0"
usbd-human-interface-device = "0.2.0"
usb-device = "0.2"
